authorisation by organization and admin/user on endpoints, git ignore update